docs: add Different JDK for main/test code #8